--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
   <!-- Add your site content here -->
 	<header>
+    <div id="main-wrapper">
 		<div id="header-wrapper">
 			<figure class="logo">
 				<a href="../index.html"><img src="img/logo.png" alt="unplugged logo"></a>
@@ -132,6 +133,7 @@
 			<img src="img/logo.png" alt="unplugged logo">
 		</figure>
 	</footer>
+</div>
 
   <script src="../unplugged/js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
